<resources>
    <string name="app_name">MaiTime</string>
    <string name="action_settings">Einstellungen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hint_datum">Datum...</string>
    <string name="hint_stunden">Stunden...</string>
    <string name="hint_minuten">Minuten...</string>
    <string name="hint_beschreibung">Beschreibung...</string>
    <string name="button_save">Speichern</string>
    <string name="empty_not_saved">Zeiteintrag konnte nicht erfasst werden.</string>
    <string name="clear_all_data">Lösche alle Zeiteinträge</string>
    <string name="unable_to_update">Zeiteintrag konnte nicht geändert werden</string>
    <string name="button_chooseDate">DATE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="datepicker">datePicker</string>
    <string name="timepicker">timePicker</string>
</resources>