<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackground"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/edit_datum"
        style="@style/text_view_style"
        android:hint="@string/hint_datum"
        android:inputType="date"
        android:onClick="showDatePicker" />

    <EditText
        android:id="@+id/edit_stunden"
        style="@style/text_view_style"
        android:hint="@string/hint_stunden"
        android:inputType="number"
        android:onClick="showTimePicker"/>
    <EditText
        android:id="@+id/edit_minuten"
        style="@style/text_view_style"
        android:hint="@string/hint_minuten"
        android:inputType="number"
        android:onClick="showTimePicker"/>
    <EditText
        android:id="@+id/edit_beschreibung"
        style="@style/text_view_style"
        android:hint="@string/hint_beschreibung"
        android:inputType="textAutoComplete" />

    <Button
        android:id="@+id/button_save"
        style="@style/button_style"
        android:layout_height="wrap_content"
        android:text="@string/button_save" />


</LinearLayout>